--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,10 +8,30 @@ html {
   height: 100%;
 }
 
+#root {
+  max-width: 700px;
+  margin: 5rem auto;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.current {
+  color: white;
+  background-color: green;
+  padding: 3px 2px 2px;
+  border-radius: 3px;
+}
+
+.complete {
+  color: green;
+}
+
+.current.error {
+  background-color: rgb(219, 3, 3);
 }
