--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,21 +9,27 @@ html {
 }
 
 body {
-  min-height: 100%;
+  height: 100%;
   background: #f9f9f9;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Roboto', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
   font-family: 'Press Start 2P', cursive;
   background: #393E46;
-  padding: 1.5rem 0;
+  padding: 1.8rem 0;
 }
 
 h1 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   word-spacing: -0.8rem;
   margin: 0;
   color: whitesmoke;
@@ -31,20 +37,90 @@ h1 {
 }
 
 h1 svg {
-  margin-right: 1rem;
-  vertical-align: text-bottom!important;
+  font-size: xx-large!important;
+  margin-right: 1.3rem;
+  vertical-align: bottom!important;
 }
 
 main {
+  width: 100%;
   max-width: 700px;
   margin: 0 auto;
+  flex-grow: 1;
+}
+
+.performance {
+  display: flex;
+  justify-content: space-around;
+  margin: 2rem 0;
+}
+
+.badge {
+  width: 210px;
+  color: #036f75;
+  font-weight: bold;
+  font-family: 'Press Start 2P';
+  word-spacing: -0.5rem;
+  text-align: center;
+  font-size: 0.8rem;
+  border-radius: 20px;
+  box-shadow: 2px -2px 4px 2px #026d73;
+  padding: 0;
+  transition: box-shadow 0.5s ease-in-out;
+}
+
+.result .badge {
+  box-shadow: 0px 0px 6px 4px gold;
+}
+
+.badge svg {
+  font-size: 1.5rem;
+  margin-right: 0.5rem;
+}
+
+.fa-crosshairs {
+  margin-right: 0.35rem!important;
+}
+
+.badge span {
+  font-size: 1.3rem;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  line-height: 30px;
+  border-top: 1px dashed gray;
+  border-bottom: 1px dashed gray;
+  margin-bottom: 2rem;
+  min-height: 240px;
+}
+
+.text.mes-prepare {
+  font-family: 'Press Start 2P';
+  word-spacing: -0.5rem;
+  text-align: center;
+  font-size: 1.1rem;
+}
+
+.text p {
+  margin: 0.5rem 0;
+}
+
+.text svg {
+  font-size: xx-large;
+  color: #036f75;
+  margin-top: 1rem;
 }
 
 .current {
   color: white;
   background-color: black;
-  padding: 3px 2px 2px;
-  border-radius: 3px;
+  padding: 4px 2px 1px;
+  border-radius: 2px;
 }
 
 .cursor-blink .current {
@@ -59,4 +135,44 @@ main {
 .current.error {
   color: white;
   background-color: rgb(202, 4, 4);
+}
+
+.btn-restart {
+  display: block;
+  cursor: pointer;
+  border: none;
+  margin: 0 auto;
+  width: 210px;
+  color: #036f75;
+  font-weight: bold;
+  font-family: 'Press Start 2P';
+  word-spacing: -0.5rem;
+  text-align: center;
+  font-size: 1rem;
+  border-radius: 20px;
+  box-shadow: 2px -2px 4px 2px #026d73;
+  padding: 0.7rem 0;
+  transition: box-shadow 0.1s ease-in-out;
+}
+.btn-restart:hover {
+  box-shadow: 0 0 8px 5px #026d73;
+  background: #d0d0d7;
+}
+
+.btn-restart svg {
+  margin-right: 0.5rem;
+  vertical-align: text-bottom;
+}
+
+footer {
+  font-family: 'Press Start 2P', cursive;
+  background: #393E46;
+  padding: 0.4rem;
+  font-size: 0.8rem;
+  margin-top: 1rem;
+  color: whitesmoke;
+}
+
+footer p {
+  margin: 0;
 }
